# MergeMark

./: .gitignore  AQA_PHYSICS_2021_FIXES.md  README.md  commands_temp.rs  index.html  out  package-lock.json  package.json  pull.cjs  pull.js  test.cjs  test.json  there are some formatting issues.txt
.github/workflows/: release.yml
docs/: INGESTION_RELIABILITY_PLAN.md
scratch/bug_verify/: Cargo.toml  doc_map_mirror.py  geometry_mirror.py  logic_mirror.py  timing_mirror.py  validate_mirror.py
scratch/bug_verify/src/: main.rs
scratch/regex_test/: Cargo.toml
scratch/regex_test/src/: main.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  PDFiumConfig.cmake  VERSION  tauri.conf.json  test_regex.rs
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  billing.rs  commands.rs  db.rs  doc_map.rs  geometry.rs  json_salvage.rs  lib.rs  llm.rs  main.rs  pdf_render.rs  pipeline.rs  taxonomy.rs  test_pdf.rs  validate.rs
src/components/: UploadCounter.tsx  theme-provider.tsx
src/components/flashcards/: FlashcardsTab.tsx
src/components/ingestion/: IngestionDropzone.tsx  ReviewSyncModal.tsx
src/components/repository/: AddQuestionModal.tsx  ManagePapersModal.tsx  QuestionCard.tsx  RepositoryFeed.tsx  RichTextEditor.css  RichTextEditor.tsx
src/components/settings/: Settings.tsx  TaxonomyManager.tsx
src/components/worksheet/: WorksheetBuilder.tsx  WorksheetItem.tsx
src/lib/: TaxonomyContext.tsx  taxonomy.ts  utils.ts
