[package]
name = "mergemark"
version = "0.1.0"
description = "MergeMark — desktop document merging and annotation tool"
authors = ["MergeMark Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mergemark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization — already used by Tauri IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database — SQLite via sqlx, sharing Tauri's tokio runtime
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Async runtime (shared with Tauri's internal runtime)
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1.23.5", features = ["v4"] }
regex = "1.13.0"
pdf-extract = "0.7"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
image = "0.25.10"
base64 = "0.22.1"
